# simple-rust-check

./: Cargo.toml  README.md
sample/: codex-windows-previewgw-authfail-report-en.md  codex-windows-previewgw-authfail-report.md
src/: main.rs
