[package]
name = "simple-rust-check"
version = "0.1.0"
edition = "2021"
publish = false

# Codex CLI の MCP HTTP パスと同じ TLS 構成を再現する。
# - default-features を有効（= default-tls = native-tls）← Codex の workspace と同じ
# - rustls-tls-native-roots も追加 ← Codex の http-client と同じ
# この構成では reqwest は native-tls を優先する（Windows では Schannel）。
#   クライアントA（標準）         → Schannel（失敗パターンを再現）
#   クライアントB（.use_rustls_tls()）→ rustls（成功パターン）
[dependencies]
reqwest = { version = "0.12", features = ["default-tls", "rustls-tls-native-roots", "http2", "cookies", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
