[package]
name = "simple-rust-check"
version = "0.1.0"
edition = "2021"
publish = false

# feature で TLS バックエンドを切り替え、Windows版CodexのSchannel非互換を再現する。
#   cargo run                                                  → rustls（成功パターン、401）
#   cargo run --no-default-features --features native-tls-mode  → native-tls（WindowsではSchannel、失敗パターン）
[features]
default = ["rustls-mode"]
rustls-mode = ["reqwest/rustls-tls-native-roots"]
native-tls-mode = ["reqwest/default-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "cookies", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
